fix: replace isBlank() with trim().isEmpty() for string checks
The change ensures consistent string emptiness checking across the codebase by replacing isBlank() with trim().isEmpty(). This handles cases where strings containing only whitespace should be considered empty.